--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
                                     </div>
                                 </div>
                                 <div class="text-center mt-3">
-                                    <button id="contact-button" class="btn btn-primary">Get A Free Quote</button><br/><br/>
+                                    <button id="contact-button" class="btn btn-primary">Get A Free Quote</button>
                                     <span id="contact-status" class="alert alert-warning font-weight-bold" hidden></span>
                                 </div>
                             </form>
