Change in About: * Layout of buttons; * href in featured company.

--- a/index.html
+++ b/index.html
@@ -116,14 +116,18 @@
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <div class="col-md-6 mx-auto text-center">
+                    <div class="col-md-4"></div>
+                    <div class="col-md-2 mx-auto text-center mb-2">
                         <a class="btn btn-primary" href="./resources/resume.pdf" download="AgustinVazquezCendron_Resume" target="_blank">
                             Download Resume
                         </a>
+                    </div>
+                    <div class="col-md-2 mx-auto text-center">
                         <a class="btn btn-outline-primary page-scroll" href="#contact">
                             Get In Touch
                         </a>
                     </div>
+                    <div class="col-md-4"></div>
                 </div>
                 <div class="row mt-5">
                     <div class="col-12 text-muted text-center font-weight-bold">My work has been featured in:</div>
@@ -132,7 +136,7 @@
                             <div class="press-item col-lg-3 col-md-3 col-6"><a href="https://www.ctinsuretech.com/" target="_blank"><img class="img-fluid mt-4" src="img/press/press-1.png" alt=""></a></div>
                             <div class="press-item col-lg-3 col-md-3 col-6"><a href="https://www.inworx.com/" target="_blank"><img class="img-fluid" src="img/press/press-2.png" alt=""></a></div>
                             <div class="press-item col-lg-3 col-md-3 col-6"><a href="https://www.info.unlp.edu.ar/" target="_blank"><img class="img-fluid" src="img/press/press-3.png" alt=""></a></div>
-                            <div class="press-item col-lg-3 col-md-3 col-6"><a href="#" target="_blank"><img class="img-fluid" src="img/press/press-4.png" alt=""></a></div>                                 
+                            <div class="press-item col-lg-3 col-md-3 col-6"><a target="_blank"><img class="img-fluid" src="img/press/press-4.png" alt=""></a></div>                                 
                         </div>
                     </div>
                 </div>
