--- a/index.html
+++ b/index.html
@@ -115,19 +115,22 @@
                         </p>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="press-item col-md-7 mx-auto text-center"><a><img class="img-fluid" src="img/sign.png" alt=""></a></div>
+                </div>
                 <div class="row mt-5">
-                    <div class="col-md-4"></div>
-                    <div class="col-md-2 mx-auto text-center mb-2">
+                    <div class="col-lg-4 col-md-3 col-sm-12"></div>
+                    <div class="col-lg-2 col-md-3 col-sm-12 mx-auto text-center mb-2">
                         <a class="btn btn-primary" href="./resources/resume.pdf" download="AgustinVazquezCendron_Resume" target="_blank">
                             Download Resume
                         </a>
                     </div>
-                    <div class="col-md-2 mx-auto text-center">
+                    <div class="col-lg-2 col-md-3 col-sm-12 mx-auto text-center">
                         <a class="btn btn-outline-primary page-scroll" href="#contact">
                             Get In Touch
                         </a>
                     </div>
-                    <div class="col-md-4"></div>
+                    <div class="col-lg-4 col-md-3 col-sm-12"></div>
                 </div>
                 <div class="row mt-5">
                     <div class="col-12 text-muted text-center font-weight-bold">My work has been featured in:</div>
