*Updating resume experience. *Change in headline.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <h1 id="#greeting" class="my-4">Hi, I'm Agustín.</h1>
                         <p class="lead mb-5 font-weight-bold">
                             An Experienced 
-                            <span class="typist" data-typist=" System Analist, Web Developer, Fullstack Developer, Software Development Engineer">Software Development Engineer</span>
+                            <span class="typist" data-typist=" Software Developer Enthusiast, System Analyst, Web Developer, Full Stack Engineer">Full Stack Engineer</span>
                         </p>
                         <a href="#about" class="btn btn-primary d-inline-flex flex-row align-items-center page-scroll">
                             Know Me Better
@@ -100,15 +100,15 @@
                         <h2>About Me</h2>
                         <div class="divider bg-primary mx-auto"></div>
                         <p class="lead">
-                            Hi, I'm <b>Agustín Vázquez Cendron</b>, a <b>Senior Software Development Engineer</b> based in <b>Argentina</b>.
+                            Hi, I'm <b>Agustín Vázquez Cendron</b>, a <b>Senior Full Stack Engineer</b> based in <b>Argentina</b>.
                             I love making <b> high-quality work</b>, respecting and paying attention to <b>every detail</b> of what the client wants.
                         </p>
                         <p class="text-muted">
                             I was born in <b>Puerto San Julián, Patagonia Argentina, on August 11, 1990.</b>
-                            I work as a Senior Software Development Engineer, covering
+                            I work as a Senior Full Stack Engineer, covering
                             the development and maintenance of the <b>entire system stack</b>,
-                            from database scripts to front-end code, through service
-                            programming and business logic in back-end.
+                            from database scripts to frontend code, through service
+                            programming and business logic in backend.
                             I'm an enthusiast of <b>good practices, design patterns and code
                             analysis</b>, and - most importantly -, <b>I'm always looking to
                             improve myself and learn new tools and technologies.</b>
@@ -161,7 +161,7 @@
                                         <div class="date">2018 &mdash; Present</div>
                                         <div class="dot"></div>
                                         <div class="event">
-                                            <h5 class="mb-2">Senior Software Development Engineer</h5>
+                                            <h5 class="mb-2">Senior Full Stack Engineer</h5>
                                             <div class="text-muted small-xl">
                                                 <span>Charles Taylor InsureTech</span>
                                                 <span class="bull">•</span>
@@ -181,6 +181,27 @@
                                                     <li>Develop support tools to reduce working time from hours to minutes.
                                                     <li>Performe project management of estimating, scheduling and monitoring tasks.</li>
                                                 </ul>
+                                                <div>
+                                                    I work with:
+                                                </div>
+                                                <div>
+                                                    <span class="badge badge-warning float-left m-1">C#</span>
+                                                    <span class="badge badge-warning float-left m-1">ASP .Net MVC</span>
+                                                    <span class="badge badge-warning float-left m-1">.Net Framework</span>
+                                                    <span class="badge badge-warning float-left m-1">.Net Core</span>
+                                                    <span class="badge badge-warning float-left m-1">Node Js</span>
+                                                    <span class="badge badge-warning float-left m-1">SQL Server</span>
+                                                    <span class="badge badge-warning float-left m-1">Oracle</span>
+                                                    <span class="badge badge-warning float-left m-1">NHibernate</span>
+                                                    <span class="badge badge-warning float-left m-1">Javascript</span>
+                                                    <span class="badge badge-warning float-left m-1">Typescript</span>
+                                                    <span class="badge badge-warning float-left m-1">Angular 2+</span>
+                                                    <span class="badge badge-warning float-left m-1">HTML5/CSS3</span>
+                                                    <span class="badge badge-warning float-left m-1">SCRUM</span>
+                                                    <span class="badge badge-warning float-left m-1">MS TFS</span>
+                                                    <span class="badge badge-warning float-left m-1">GIT</span>
+                                                    <span class="badge badge-warning float-left m-1">Azure DevOps</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -188,7 +209,7 @@
                                         <div class="date">2015 &mdash; 2018</div>
                                         <div class="dot"></div>
                                         <div class="event">
-                                            <h5 class="mb-2">Senior Software Analyst & Developer</h5>
+                                            <h5 class="mb-2">Fullstack Senior Software Analyst & Developer</h5>
                                             <div class="text-muted small-xl">
                                                 <span>Inworx SA</span>
                                                 <span class="bull">•</span>
@@ -206,6 +227,23 @@
                                                     <li>Maintain current systems.</li>
                                                     <li>Backlog negotiation and project estimations.</li>
                                                 </ul>
+                                                <div>
+                                                    I worked with:
+                                                </div>
+                                                <div>
+                                                    <span class="badge badge-warning float-left m-1">C#</span>
+                                                    <span class="badge badge-warning float-left m-1">ASP .Net MVC</span>
+                                                    <span class="badge badge-warning float-left m-1">.Net Framework</span>
+                                                    <span class="badge badge-warning float-left m-1">Delphi</span>
+                                                    <span class="badge badge-warning float-left m-1">SQL Server</span>
+                                                    <span class="badge badge-warning float-left m-1">Oracle</span>
+                                                    <span class="badge badge-warning float-left m-1">NHibernate</span>
+                                                    <span class="badge badge-warning float-left m-1">Javascript</span>
+                                                    <span class="badge badge-warning float-left m-1">Angular Js</span>
+                                                    <span class="badge badge-warning float-left m-1">HTML5/CSS3</span>
+                                                    <span class="badge badge-warning float-left m-1">SCRUM</span>
+                                                    <span class="badge badge-warning float-left m-1">MS TFS</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -231,6 +269,18 @@
                                                     <li>Frequently resolved IT issues with little or no supervision.</li>
                                                     <li>Install and configure computer networks.</li>
                                                 </ul>
+                                                <div>
+                                                    I worked with:
+                                                </div>
+                                                <div>
+                                                    <span class="badge badge-warning float-left m-1">ASP .Net</span>
+                                                    <span class="badge badge-warning float-left m-1">MySQL</span>
+                                                    <span class="badge badge-warning float-left m-1">Visual Basic</span>
+                                                    <span class="badge badge-warning float-left m-1">Javascript</span>
+                                                    <span class="badge badge-warning float-left m-1">JQuery</span>
+                                                    <span class="badge badge-warning float-left m-1">PHP</span>
+                                                    <span class="badge badge-warning float-left m-1">GIT</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -266,7 +316,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <span class="text-muted font-weight-bold">2010 &mdash; 2015</span>
-                                <h5>Bachelor Degree in Systems and Computer Science</h5>
+                                <h5>Bachelor's Degree in Systems and Computer Science</h5>
                                 <p class="text-muted small-xl">University of La Plata | La Plata | Argentina</p>
                                 <p>Bachelor's degree in Computer Science, 5 years long (2010-2015).
                                     I entered university in 2010 and finished my studies in
@@ -435,7 +485,7 @@
                         <div class="divider bg-primary mx-auto mt-5 mb-5"></div>
                         <h5 class="">DevOps & Project Management</h5>
                         <div class="skill">
-                            <div class="skill-name">Azure DevOps Server <span class="badge badge-primary float-right">70%</span></div>
+                            <div class="skill-name">Azure DevOps <span class="badge badge-primary float-right">70%</span></div>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
@@ -801,6 +851,12 @@
                                 Puerto San Julián, Santa Cruz, Patagonia Argentina</a>
                             </li>
                         </ul>
+                    </div>
+                   
+                </div>
+                <div class="row">
+                    <div class="col-md-12  mt-6 text-center">
+                        <h2 class="text-white" style="font-family: Pacifico;">"The Future is so bright that we will wear dark glasses"</h2>
                     </div>
                 </div>
                 <hr class="my-5"/>
