* Update index.html: hiding portfolio section.

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#testimonials">Testimonials</a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
+                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#contact">Contact</a>
                     </li>
@@ -715,7 +715,7 @@
 
         
         <!--portfolio section-->
-        <section class="py-7" id="portfolio">
+        <!--<section class="py-7" id="portfolio">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 mx-auto text-center">
@@ -751,7 +751,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!--request a quote section-->
         <section class="py-7 bg-light">
