* Update index.html. * Adding new courses with certificates.

--- a/index.html
+++ b/index.html
@@ -301,17 +301,7 @@
                         <div class="divider bg-primary mx-auto"></div>
                     </div>
                 </div>
-                <div class="row mt-5">
-                    <div class="col-md-6  mb-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <span class="text-muted font-weight-bold">2010 &mdash; 2012</span>
-                                <h5>Associate Degree in Systems and Computer Science</h5>
-                                <p class="text-muted small-xl">University of La Plata | La Plata | Argentina</p>
-                                <p>Asociate degree in Computer Science, 3 years long (2010-2012)</p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row mt-5">                    
                     <div class="col-md-6 mb-3">
                         <div class="card">
                             <div class="card-body">
@@ -324,19 +314,6 @@
                                     of it is "Layered Architecture: analysis and case study of
                                     the "n-layer" architectural model and its variants", which I
                                     approved with note 8.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <div class="card">
-                            <div class="card-body">
-                                <span class="text-muted font-weight-bold">2015</span>
-                                <h5>Specialization Course</h5>
-                                <p class="text-muted small-xl">LIFIA Research Center of the National University of La Plata | La Plata | Argentina</p>
-                                <p>Advanced specialization course in Object Oriented Design, Design Patterns and UML.</p>
-                                <span class="badge badge-warning float-left m-1">Design Patterns</span>
-                                <span class="badge badge-warning float-left m-1">UML</span>
-                                <span class="badge badge-warning float-left m-1">OO Design</span>
                             </div>
                         </div>
                     </div>
@@ -361,6 +338,81 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-6  mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <span class="text-muted font-weight-bold">2010 &mdash; 2012</span>
+                                <h5>Associate Degree in Systems and Computer Science</h5>
+                                <p class="text-muted small-xl">University of La Plata | La Plata | Argentina</p>
+                                <p>Asociate degree in Computer Science, 3 years long (2010-2012)</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-md-6 mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <span class="text-muted font-weight-bold">2015</span>
+                                <h5>Specialization Course</h5>
+                                <p class="text-muted small-xl">LIFIA Research Center of the National University of La Plata | La Plata | Argentina</p>
+                                <p>Advanced specialization course in Object Oriented Design, Design Patterns and UML.</p>
+                                <span class="badge badge-warning float-left m-1">Design Patterns</span>
+                                <span class="badge badge-warning float-left m-1">UML</span>
+                                <span class="badge badge-warning float-left m-1">OO Design</span>
+                            </div>
+                        </div>
+                    </div>       
+                    <div class="col-md-6  mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <span class="text-muted font-weight-bold">2020</span>
+                                <h5>Microsoft SQL Server 2019 Essential Training <a href="https://www.linkedin.com/learning/microsoft-sql-server-2019-essential-training/harness-the-modern-and-innovative-tools-in-sql-server-2019?autoplay=true" target="_blank" class="fa fa-link small text-info"></a></h5> 
+                                <p class="text-muted small-xl">LinkedIn</p>
+                                <p>Master the fundamentals of SQL Server 2019, the industry-leading database management platform from Microsoft.</p>
+                                <p ><strong><a href="./resources/Cert_MSServer2019.pdf" target="_blank" class="text-info">Certificate</a></strong></p>
+                                <span class="badge badge-warning float-left m-1">SQL Server</span>
+                                <span class="badge badge-warning float-left m-1">DBA</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6  mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <span class="text-muted font-weight-bold">2020</span>
+                                <h5>React.js <a href="http://www.linkedin.com/learning/learning-react-js-5?trk=flagship-lil_details_certification" target="_blank" class="fa fa-link small text-info"></a></h5> 
+                                <p class="text-muted small-xl">LinkedIn</p>
+                                <p>This course guides you through the foundations of React development, including the use of React hooks—a new feature starting in React 16.8 that allows developers to add functionality to components without writing classes</p>
+                                <p ><strong><a href="./resources/Cert_ReactJSEss.pdf" target="_blank" class="text-info">Certificate</a></strong></p>
+                                <span class="badge badge-warning float-left m-1">React.js</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6  mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <span class="text-muted font-weight-bold">2020</span>
+                                <h5>Building Applications with Angular, ASP.NET Core, and Entity Framework Core <a href="http://www.linkedin.com/learning/building-applications-with-angular-asp-dot-net-core-and-entity-framework-core?trk=flagship-lil_details_certification" target="_blank" class="fa fa-link small text-info"></a></h5> 
+                                <p class="text-muted small-xl">LinkedIn</p>
+                                <p>This course teaches integration through the perspective of a quiz project, with instructor Alexander Zanfir showing how to use Angular, ASP.NET Core, and Entity Framework Core to develop a full-stack application. Alexander explains how to display and edit data in Angular with ASP.NET Core, create forms, navigate to different views, and more.</p>
+                                <p ><strong><a href="./resources/Cert_NetCoreEfNg.pdf" target="_blank" class="text-info">Certificate</a></strong></p>
+                                <span class="badge badge-warning float-left m-1">ASP.Net Core</span>
+                                <span class="badge badge-warning float-left m-1">Angular</span>
+                                <span class="badge badge-warning float-left m-1">Entity Framework Core</span>
+                            </div>
+                        </div>
+                    </div>    
+                    <div class="col-md-6  mb-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <span class="text-muted font-weight-bold">2020</span>
+                                <h5>Node.js <a href="http://www.linkedin.com/learning/node-js-essential-training-3?trk=flagship-lil_details_certification" target="_blank" class="fa fa-link small text-info"></a></h5> 
+                                <p class="text-muted small-xl">LinkedIn</p>
+                                <p>This course acquaints you with all of the basics, showing how to install Node.js and work with the Node.js core, which includes standard input, standard output, the module system, the file system, and how to write and run JavaScript on the server.</p>
+                                <p ><strong><a href="./resources/Cert_NodeJSEss.pdf" target="_blank" class="text-info">Certificate</a></strong></p>
+                                <span class="badge badge-warning float-left m-1">Node.js</span>
+                            </div>
+                        </div>
+                    </div>                
                 </div>
             </div>
         </section>
@@ -376,7 +428,7 @@
                 </div>
                 <div class="row mt-5">
                     <div class="col-md-4 px-5 mb-5">
-                        <h5>WEB Development</h5>
+                        <h5>WEB & Mobile Development</h5>
                         <div class="skill">
                             <div class="skill-name">ASP.NET MVC <span class="badge badge-primary float-right">90%</span></div>
                             <div class="progress">
@@ -414,9 +466,15 @@
                             </div>
                         </div>
                         <div class="skill">
-                            <div class="skill-name">IONIC <span class="badge badge-primary float-right">40%</span></div>
+                            <div class="skill-name">IONIC <span class="badge badge-primary float-right">15%</span></div>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill-name">Flutter <span class="badge badge-primary float-right">15%</span></div>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                         <div class="skill">
@@ -477,7 +535,7 @@
                             </div>
                         </div>
                         <div class="skill">
-                            <div class="skill-name">Python <span class="badge badge-primary float-right">30%</span></div>
+                            <div class="skill-name">Firebase <span class="badge badge-primary float-right">30%</span></div>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
@@ -547,6 +605,12 @@
                         <h5>Other Skills</h5>
                         <div class="skill">
                             <div class="skill-name">Design Patterns <span class="badge badge-primary float-right">90%</span></div>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <div class="skill-name">SOLID <span class="badge badge-primary float-right">90%</span></div>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
