* Removing testimonials section.

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#services">Services</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link page-scroll" href="#testimonials">Testimonials</a>
-                    </li>
+                    </li> -->
                     <!--<li class="nav-item">
                         <a class="nav-link page-scroll" href="#portfolio">Portfolio</a>
                     </li>-->
@@ -725,7 +725,7 @@
         </section>
 
         <!--testimonials section-->
-        <section class="py-7 bg-light" id="testimonials">
+        <!-- <section class="py-7 bg-light" id="testimonials">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 mx-auto text-center">
@@ -763,7 +763,7 @@
                                 </blockquote>
                             </div>
                         </div>
-                        <!-- <div class="media text-center">
+                        <div class="media text-center">
                             <img src="img/client-3.jpg" class="img-fluid img-profile rounded-circle d-block mx-auto" alt="Client 3"/>
                             <div class="media-body mt-4">
                                 <blockquote class="blockquote">
@@ -771,11 +771,11 @@
                                     <footer class="blockquote-footer mt-3"><b>Kathrine Jones</b> <br/> <small>Senior Developer at GitHub</small></footer>
                                 </blockquote>
                             </div>
-                        </div> -->
+                        </div> 
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         
         <!--portfolio section-->
